chore: swagger release and pagination added
