# src/swagger_output.json
@@ -95,31 +95,29 @@
           "Posts"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/rows"
+          },
+          {
+            "$ref": "#/components/parameters/page"
+          },
+          {
+            "$ref": "#/components/parameters/order"
+          }
+        ],
         "responses": {
           "200": {
             "description": "List of Posts",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Post"
-                  },
-                  "xml": {
-                    "name": "main"
-                  }
+                  "$ref": "#/components/schemas/PostPaginated"
                 }
               },
               "application/xml": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Post"
-                  },
-                  "xml": {
-                    "name": "main"
-                  }
+                  "$ref": "#/components/schemas/PostPaginated"
                 }
               }
             }
@@ -129,6 +127,33 @@
     }
   },
   "components": {
+    "parameters": {
+      "rows": {
+        "name": "rows",
+        "description": "rows to be returned in one page",
+        "required": true,
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "page": {
+        "name": "page",
+        "description": "page index of pagination",
+        "required": true,
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "order": {
+        "name": "order",
+        "description": "order of pagination [ field,order ]",
+        "required": true,
+        "example": "title,asc",
+        "schema": {
+          "type": "string"
+        }
+      }
+    },
     "schemas": {
       "Post": {
         "type": "object",
@@ -164,7 +189,7 @@
           },
           "createdAt": {
             "type": "string",
-            "example": "Sun Jan 29 2023 21:09:16 GMT-0400 (Amazon Standard Time)"
+            "example": "Mon Jan 30 2023 21:22:09 GMT-0400 (Amazon Standard Time)"
           }
         },
         "required": [
@@ -178,6 +203,41 @@
         ],
         "xml": {
           "name": "Post"
+        }
+      },
+      "PostPaginated": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "array",
+            "items": {
+              "xml": {
+                "name": "post"
+              },
+              "$ref": "#/components/schemas/Post"
+            }
+          },
+          "rows": {
+            "type": "number",
+            "example": 5
+          },
+          "page": {
+            "type": "number",
+            "example": 0
+          },
+          "totalRecords": {
+            "type": "number",
+            "example": 10
+          }
+        },
+        "required": [
+          "content",
+          "rows",
+          "page",
+          "totalRecords"
+        ],
+        "xml": {
+          "name": "PostPaginated"
         }
       },
       "PostCreate": {
@@ -269,6 +329,37 @@
         ],
         "xml": {
           "name": "ImageCreated"
+        }
+      },
+      "PaginateQuery": {
+        "type": "object",
+        "properties": {
+          "rows": {
+            "xml": {
+              "name": "rows"
+            },
+            "$ref": "#/components/parameters/rows"
+          },
+          "page": {
+            "xml": {
+              "name": "page"
+            },
+            "$ref": "#/components/parameters/page"
+          },
+          "order": {
+            "xml": {
+              "name": "order"
+            },
+            "$ref": "#/components/parameters/order"
+          }
+        },
+        "required": [
+          "rows",
+          "page",
+          "order"
+        ],
+        "xml": {
+          "name": "PaginateQuery"
         }
       }
     }
